--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="password">Şifre</string>
     <string name="kayitol">Kayıt Ol</string>
     <string name="girisyap">Giriş Yap</string>
+    <string name="uyeolmakistiyorum">Üye Olmak İstiyorum</string>
 </resources>
