--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="ad">Ad</string>
     <string name="soyad">Soyad</string>
     <string name="guncelle">Güncelle</string>
+    <string name="sifremiunuttum">Şiremi Unuttum</string>
 </resources>
