--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="sifremiunuttum">Şiremi Unuttum</string>
     <string name="cikisyap">Çıkış Yap</string>
     <string name="takvim">Takvim</string>
+    <string name="ekle">Ekle</string>
 </resources>
